--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@
 #spring.data.mongodb.uri=mongodb://produce-user:m2pNKQQHr4fr20UJ@fd-produce-db/fd-produce
 
 spring.data.mongodb.uri=mongodb://localhost:27017/receipt-wallet
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
